# LoraRadio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AutoStartRegistry.cpp  AutoStartRegistry.h  CMakeLists.txt  FontLoader.h  IconButton.cpp  IconButton.h  IconProvider.h  IconUtils.h  LICENSE.md  MainWindow.cpp  MainWindow.h  QuickControlPopup.cpp  QuickControlPopup.h  README.md  StationDialog.cpp  StationDialog.h  StationDialog.ui  app.rc  main.cpp  radioplayer.cpp  radioplayer.h  stationmanager.cpp  stationmanager.h  stations.json  trayiconmanager.cpp  trayiconmanager.h
QtAwesome/: CMakeLists.txt
fonts/: fonts.qrc
include/: AbstractPlayer.h
resources/: resources.qrc  stations_default.json
resources/translations/: loraradio_en.qm  loraradio_ru.qm
src/: AbstractPlayer.h  AutoStartRegistry.cpp  AutoStartRegistry.h  IconButton.cpp  IconButton.h  MainWindow.cpp  MainWindow.h  QuickControlPopup.cpp  QuickControlPopup.h  RadioPage.cpp  RadioPage.h  RadioPlayer.cpp  RadioPlayer.h  StationDialog.cpp  StationDialog.h  StationManager.cpp  StationManager.h  SwitchPlayer.cpp  SwitchPlayer.h  YTPlayer.cpp  YTPlayer.h  YouTubePage.cpp  YouTubePage.h  main.cpp  stationmanager.cpp  stationmanager.h  trayiconmanager.cpp  trayiconmanager.h
styles/: darkstyle.qss  style.qrc
